force-app/main/default/objects/SBQQ__ProcessInput__c/fields/School_Level_DK__c.field-meta.xml
<CustomField>
    <fullName>School_Level_DK__c</fullName>
    <description>Custom field used in the &apos;Denmark Quote Process&apos; to filter out products</description>
    <label>School Level DK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Børnehaveklasse/0. Klasse</fullName>
            </value>
            <value>
                <fullName>Mellemtrin</fullName>
            </value>
            <value>
                <fullName>Indskolning</fullName>
            </value>
            <value>
                <fullName>Udskolning</fullName>
            </value>
            <value>
                <fullName>10. Klasse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>