force-app/main/default/objects/SBQQ__ProcessInput__c/fields/School_Level_SE__c.field-meta.xml
<CustomField>
    <fullName>School_Level_SE__c</fullName>
    <description>Custom field used in &apos;Sweden Quote Process&apos; to filter out Swedish School Levels</description>
    <label>School Level SE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Högstadiet</fullName>
            </value>
            <value>
                <fullName>Mellanstadiet</fullName>
            </value>
            <value>
                <fullName>Förberedelseklass</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>Gymnasiet</fullName>
                <isActive>false</isActive>
                <label>Gymnasiet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>