force-app/main/default/objects/SBQQ__ProcessInput__c/fields/School_Subject_DK__c.field-meta.xml
<CustomField>
    <fullName>School_Subject_DK__c</fullName>
    <description>Custom field used in the &apos;Denmark Quote Process&apos; to filter out products</description>
    <label>School Subject DK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Naturfagspakken</fullName>
            </value>
            <value>
                <fullName>Kulturfagspakken</fullName>
            </value>
            <value>
                <fullName>Sprogfaspakken</fullName>
            </value>
            <value>
                <fullName>Dansk</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>