force-app/main/default/objects/SBQQ__ProcessInput__c/fields/School_Subject_SE__c.field-meta.xml
<CustomField>
    <fullName>School_Subject_SE__c</fullName>
    <description>Custom field used in the &apos;Sweden Quote Process&apos; to filter out products</description>
    <label>School Subject SE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Svenska</fullName>
            </value>
            <value>
                <fullName>Engelska</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Biologi</fullName>
                <isActive>false</isActive>
                <label>Biologi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>